<resources>
    <string name="app_name" translatable="false">FurGuardian</string>
    <string name="title_home">Home</string>
    <string name="title_health">Health</string>
    <string name="title_notifications">Notifications</string>
    <string name="Records">Records</string>
    <string name="title_peted" translatable="false">PetEd</string>
    <string name="hello">Hello</string>
    <string name="healthfragtext">This is the Health fragment</string>
    <string name="add_feeding_schedule">Add Feeding Schedule</string>
    <string name="time">Time (e.g., 8:00 AM)</string>
    <string name="meal">Meal Type (e.g., Dry Food)</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="schedule">Morning: 8:00 AM Afternoon: 1:00 PM Evening: 7:00 PM</string>
    <string name="show_past_records">Show Past Records</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_message">Welcome to our home page. We are currently under construction.</string>
    <string name="health_message">This is our health page that will be dedicated to tacking health markers. currently under construction</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="lockscreen_orientation">Lockscreen Orientation</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="location">Location</string>
    <string name="reminder_channel">reminder_channel</string>
    <string name="reminder_notifications">Reminder Notifications</string>
    <string name="channel_for_reminder_notifications">Channel for reminder notifications</string>
    <string name="exit_app">Exit App</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pet_profile">Pet Profile</string>
    <string name="reminders">Reminders</string>
    <string name="account_info">Account Information</string>
    <string name="settings">Settings</string>
    <string name="selected">"Selected: "</string>
    <string name="please_enter_a_reminder_name">Please enter a reminder name</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_saved">Reminder saved!</string>
    <string name="at">" at "</string>
    <string name="notification_permission_denied">Notification permission denied</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="our_healthh_image">Our Healthh Image!</string>
    <string name="our_home_image">Our Home Image</string>
    <string name="pet_education">Pet Education</string>
    <string name="enter_reminder_name">Enter reminder name</string>
    <string name="pick_date_and_time">Pick Date and Time</string>
    <string name="no_date_selected">No date selected</string>
    <string name="save_reminder">Save Reminder</string>
    <string name="user_already_registered">User already registered.</string>
    <string name="registration_successful">Registration Successful!</string>
    <string name="registration_failed">Registration Failed.</string>
    <string name="database_error">"Database Error: "</string>
    <string name="feedback">Feedback</string>
    <string name="submit">Submit</string>
    <string name="comments">Comments</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="pet_name">Pet Name</string>
    <string name="add_a_new_pet">Add a New Pet</string>
    <string name="pet_age_years">Pet Age (years)</string>
    <string name="pet_weight_lbs">Pet Weight (lbs)</string>
    <string name="dog">Dog</string>
    <string name="select_image">Select Image</string>
    <string name="add_pet">Add Pet</string>
    <string name="cat">Cat</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="are_you_sure_you_want_to_save_these_changes">Are you sure you want to save these changes?</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="user_already_registered1">User already registered.</string>
    <string name="registration_failed_please_try_again">Registration failed. Please try again.</string>
    <string name="database_error1">"Database error: "</string>
    <string name="invalid_email_or_password">Invalid email or password.</string>
    <string name="user_not_found_please_register">User not found. Please register.</string>
    <string name="user_data_not_found">User data not found.</string>
    <string name="user_does_not_exist">User does not exist.</string>
    <string name="failed_to_update_user_data">Failed to update user data.</string>
    <string name="data_successfully_sent_to_database">Data successfully sent to database.</string>
    <string name="failed_to_send_data_to_database">Failed to send data to database.</string>
    <string name="your_heart_rate_is_elevated_take_a_few_moments_to_relax">Your heart rate is elevated. Take a few moments to relax.</string>
    <string name="you_haven_t_reached_your_daily_step_goal_try_to_be_more_active">You haven\'t reached your daily step goal. Try to be more active!</string>
    <string name="you_might_need_more_sleep_for_optimal_health">You might need more sleep for optimal health.</string>
    <string name="great_job_keep_up_the_healthy_habits">Great job! Keep up the healthy habits.</string>
    <string name="current_weight">"Current Weight: "</string>
    <string name="sleep_hours">"Sleep Hours: "</string>
    <string name="steps">"Steps: "</string>
    <string name="heart_rate">"Heart Rate: "</string>
    <string name="respiratory_rate">"Respiratory Rate: "</string>
    <string name="distance_2f_km">Distance: %.2f km</string>
    <string name="hrs">" hrs"</string>
    <string name="kg">" kg"</string>
    <string name="bpm">" bpm"</string>
    <string name="add_weight_record">Add Weight Record</string>
    <string name="enter_weight_in_kg">Enter weight in kg</string>
    <string name="add">Add</string>
    <string name="weight_record_updated">Weight record updated!</string>
    <string name="weight_cannot_be_empty">Weight cannot be empty</string>
    <string name="cancel">Cancel</string>
    <string name="add_medical_record">Add Medical Record</string>
    <string name="enter_medical_record_details">Enter medical record details</string>
    <string name="vaccination_schedule1">Vaccination Schedule</string>
    <string name="pet_vaccination">Pet Vaccination</string>
    <string name="pet_vaccination_schedule">Pet Vaccination Schedule</string>
    <string name="notification_permission_denied1">Notification permission denied</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="age">"Age: "</string>
    <string name="weight">"Weight: "</string>
    <string name="breed">"Breed: "</string>
    <string name="years">" years"</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="android_resource_ca_furguardian_it_petwellness">android.resource://ca.furguardian.it.petwellness/</string>
    <string name="no_pet_to_delete">No pet to delete.</string>
    <string name="pet_name1">Pet Name</string>
    <string name="age_0">Age: 0</string>
    <string name="weight_0">Weight: 0</string>
    <string name="breed_unknown">Breed: Unknown</string>
    <string name="changes_saved_successfully">Changes saved successfully</string>
    <string name="failed_to_save_changes">"Failed to save changes: "</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_updated">Password updated</string>
    <string name="user_data_not_available">User data not available</string>
    <string name="failed_to_load_user_information">"Failed to load user information: "</string>
    <string name="confirm_changes1">Confirm Changes</string>
    <string name="are_you_sure_you_want_to_save_these_changes1">Are you sure you want to save these changes?</string>
    <string name="yes1">Yes</string>
    <string name="no1">No</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="phone_number_must_be_10_digits">Phone number must be 10 digits</string>
    <string name="password_must_be_8_16_characters_contain_at_least_1_uppercase_letter_1_number_and_1_symbol">Password must be 8–16 characters, contain at least 1 uppercase letter, 1 number, and 1 symbol</string>
    <string name="passwords_do_not_match1">Passwords do not match</string>
    <string name="email">email</string>
    <string name="password1">password</string>
    <string name="registration_successful1">Registration successful!</string>
    <string name="email1">email</string>
    <string name="login_successful">Login Successful!</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="last_feeding_08_30_am">Last Feeding: 08:30 AM</string>
    <string name="tip_keep_your_pet_hydrated">Tip: Keep your pet hydrated.</string>
    <string name="camera_connecting">Camera: Connecting…</string>
    <string name="camera_connected">Camera: Connected!</string>
    <string name="microphone_start_speaking">Microphone: Start speaking…</string>
    <string name="microphone_sent">Microphone: Sent!</string>
    <string name="speaker_playing_audio">Speaker: Playing audio…</string>
    <string name="steps_4500">Steps: 4500</string>
    <string name="pet_name12">Pet Name</string>
    <string name="breed_unknown1">Breed: Unknown</string>
    <string name="create_account">Create Account</string>
    <string name="name1">Name</string>
    <string name="phone_number1">Phone Number</string>
    <string name="email2">Email</string>
    <string name="password3">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="current_name_john_doe">Current Name: John Doe</string>
    <string name="current_phone_123_456_7890">Current Phone: 123–456–7890</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="enter_new_phone_number">Enter new phone number</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_name">Edit Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="sign_out">Sign Out</string>
    <string name="record_title">Record Title</string>
    <string name="summary">Summary</string>
    <string name="detailed_information_about_the_record">Detailed information about the record.</string>
    <string name="view_more1">View More</string>
    <string name="delete">Delete</string>
    <string name="age_01">Age: 0</string>
    <string name="weight_01">Weight: 0</string>
    <string name="next">Next</string>
    <string name="add_pet1">Add Pet</string>
    <string name="previous">Previous</string>
    <string name="delete1">Delete</string>
</resources>