<?xml version="1.0" encoding="utf-8"?>
<!--Justin Chipman - N01598472-->
<!--Imran Zafurallah - N01585098-->
<!--Zane Aransevia - N01351168-->
<!--Tevadi Brookes - N01582563-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_health"
        android:icon="@drawable/ic_action_name"
        android:title="@string/title_health" />

    <item
        android:id="@+id/navigation_records"
        android:icon="@drawable/ic_records_foreground"
        android:title="@string/Records" />

    <item
        android:id="@+id/navigation_peted"
        android:icon="@drawable/bookmark_icon"
        android:title="@string/title_peted" />

</menu>