<?xml version="1.0" encoding="utf-8"?>
<!--Justin Chipman - N01598472-->
<!--Imran Zafurallah - N01585098-->
<!--Zane Aransevia - N01351168-->
<!--Tevadi Brookes - N01582563-->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/text_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:paddingBottom="8dp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/text_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detailed_information_about_the_record"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_more1"/>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
