<!--Justin Chipman - N01598472-->
<!--Imran Zafurallah - N01585098-->
<!--Zane Aransevia - N01351168-->
<!--Tevadi Brookes - N01582563-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fragment_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textCurrentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/current_name_john_doe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCurrentPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/current_phone_123_456_7890"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCurrentName" />

    <!-- Password Checkbox and Editable Fields with Confirmation -->

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="360dp"
        android:layout_height="41dp"
        android:layout_marginBottom="104dp"
        android:hint="Enter new password"
        android:inputType="textPassword"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveChanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="360dp"
        android:layout_height="41dp"
        android:layout_marginBottom="152dp"
        android:hint="@string/enter_new_name"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveChanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="360dp"
        android:layout_height="41dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_new_phone_number"
        android:inputType="phone"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveChanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="360dp"
        android:layout_height="41dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveChanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxEditPhone"
        android:layout_width="155dp"
        android:layout_height="49dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="96dp"
        android:inputType="phone"
        android:text="@string/edit_phone_number"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxEditPassword"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxEditPassword"
        android:layout_width="120dp"
        android:layout_height="51dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="7dp"
        android:text="@string/edit_password"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxEditPhone"
        app:layout_constraintStart_toEndOf="@+id/checkBoxEditName"
        app:layout_constraintTop_toBottomOf="@+id/textCurrentPhone" />

    <CheckBox
        android:id="@+id/checkBoxEditName"
        android:layout_width="100dp"
        android:layout_height="51dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="7dp"
        android:text="@string/edit_name"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxEditPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCurrentPhone" />

    <!-- Save Changes Button -->

    <!-- Sign Out Button -->

    <Button
        android:id="@+id/buttonSaveChanges"
        android:layout_width="303dp"
        android:layout_height="59dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="224dp"
        android:text="@string/save_changes"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSignOut"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="50dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
